Alteração dos objetos de reponse para retornar o objeto carro.
