# src/main/java/br/com/grupomult/flows/carros/AtualizaCarroResponse.java
@@ -5,18 +5,18 @@ import java.net.URI;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import br.com.grupomult.entities.Carro;
 import br.com.grupomult.entities.ResponsePutCarros;
-import br.com.grupomult.models.CarroModel;
 
 public class AtualizaCarroResponse {
 
-	public ResponseEntity<ResponsePutCarros> execute(CarroModel carroModel) {
+	public ResponseEntity<ResponsePutCarros> execute(Carro entity) {
 		URI uri = ServletUriComponentsBuilder
 						.fromCurrentRequest()
 						.buildAndExpand()
 						.toUri();
 		return ResponseEntity.ok(new ResponsePutCarros()
-										.carro(carroModel)
+										.carro(entity)
 										.uri(uri.toString())
 								);
 	}
