# src/main/java/br/com/grupomult/flows/carros/ListCarrosByIdResponse.java
@@ -2,13 +2,15 @@ package br.com.grupomult.flows.carros;
 
 import org.springframework.http.ResponseEntity;
 
+import br.com.grupomult.entities.Carro;
 import br.com.grupomult.entities.ResponseGetCarrosById;
-import br.com.grupomult.models.CarroModel;
 
 public class ListCarrosByIdResponse {
 
-	public ResponseEntity<ResponseGetCarrosById> execute(CarroModel carroModel) {
-		return ResponseEntity.ok(new ResponseGetCarrosById().carro(carroModel));
+	public ResponseEntity<ResponseGetCarrosById> execute(Carro entity) {
+		return ResponseEntity.ok(new ResponseGetCarrosById()
+											.carro(entity)
+								 );
 	}
 
 }
