# src/main/java/br/com/grupomult/flows/carros/ListCarrosResponse.java
@@ -4,12 +4,12 @@ import java.util.List;
 
 import org.springframework.http.ResponseEntity;
 
+import br.com.grupomult.entities.Carro;
 import br.com.grupomult.entities.ResponseGetCarros;
-import br.com.grupomult.models.CarroModel;
 
 public class ListCarrosResponse {
 
-	public ResponseEntity<ResponseGetCarros> execute(List<CarroModel> carrosApi) {
+	public ResponseEntity<ResponseGetCarros> execute(List<Carro> carrosApi) {
 		if (carrosApi.isEmpty()) {
 			return ResponseEntity.noContent().build();
 		} else {
